--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovnonvo/abc-editor",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A React component for editing ABC music notation with syntax highlighting, autocomplete, and validation",
   "type": "module",
   "main": "./dist/abc-editor.cjs.js",
@@ -11,8 +11,7 @@
       "types": "./dist/lib/index.d.ts",
       "import": "./dist/abc-editor.es.js",
       "require": "./dist/abc-editor.cjs.js"
-    },
-    "./styles.css": "./dist/abc-editor.css"
+    }
   },
   "files": [
     "dist",
@@ -51,15 +50,11 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
+    "abcjs": "^6.0.0",
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "abcjs": "^6.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "abcjs": "^6.5.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.10.1",
@@ -67,6 +62,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.12",
+    "abcjs": "^6.5.2",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -74,10 +70,13 @@
     "globals": "^16.5.0",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
     "vitest": "^4.0.12"
   }
 }
